// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the questions the model sees, on the testkit > pins every question at the summary 1`] = `
{
  "addressedToSystem": {
    "criteria": {
      "false": "Talking to someone else in the room, to a television, or to themselves, even when what they say is about the call",
      "true": "Anything said in reply to the phone system, including a short answer or correction to the question it just asked, such as a name, a day, a number, a yes or no, or a bare correction",
    },
    "instructions": "Read asr.text. Is the caller speaking to the phone system, as opposed to someone else in the room, a television, or themselves?",
    "type": "noul",
  },
  "changeSlot": {
    "criteria": {
      "expectedDate": "They name the day it was due as the thing to change, without saying the new day",
      "missingNote": "They say the description of the parcel is wrong or incomplete, without giving a new one",
      "none": "They say a new value rather than naming which detail is wrong; or they only answer yes or no; or they name nothing",
    },
    "instructions": "Read asr.text and node.promptJustPlayed. The caller was read a summary of their report and asked to confirm it, or asked what to change. Which detail do they name as wrong or ask to change?",
    "type": "choice",
  },
  "confirmsNo": {
    "criteria": {
      "false": "The caller agrees, answers something else, or says nothing about the question",
      "true": "The caller says no, says something is wrong, or gives a value that replaces or contradicts a detail the system just read back, including a bare correction such as "not the twelfth, the thirteenth" or "Saturday, not Friday", whether or not the system itself named the value they reject",
    },
    "instructions": "Read asr.text and node.promptJustPlayed. Does the caller answer no to the confirmation question?",
    "type": "noul",
  },
  "confirmsYes": {
    "instructions": "Read asr.text and node.promptJustPlayed. Does the caller answer yes to the confirmation question?",
    "type": "noul",
  },
  "confusedByPrompt": {
    "instructions": "Read asr.text and node.promptJustPlayed. Does the caller sound confused by what the system just asked?",
    "type": "noul",
  },
  "describesParcel": {
    "instructions": "Read asr.text. Does the caller describe the missing parcel: what was in it, what it looked like, or where it should have been left? A request alone is not a description.",
    "type": "noul",
  },
  "expectedDateDay": {
    "criteria": {
      "1": null,
      "10": null,
      "11": null,
      "12": null,
      "13": null,
      "14": null,
      "15": null,
      "16": null,
      "17": null,
      "18": null,
      "19": null,
      "2": null,
      "20": null,
      "21": null,
      "22": null,
      "23": null,
      "24": null,
      "25": null,
      "26": null,
      "27": null,
      "28": null,
      "29": null,
      "3": null,
      "30": null,
      "31": null,
      "4": null,
      "5": null,
      "6": null,
      "7": null,
      "8": null,
      "9": null,
      "none": null,
    },
    "instructions": "Read asr.text. The caller is saying which day a parcel was due to arrive. Which day of the month do they name, if any? The caller's date of birth is not the day the parcel was due.",
    "type": "choice",
  },
  "expectedDateMode": {
    "criteria": {
      "absolute": null,
      "none": null,
      "relative_day": null,
      "weekday": null,
    },
    "instructions": "Read asr.text. The caller is saying which day a parcel was due to arrive. How do they refer to the day? "relative_day" is today, yesterday, or the day before yesterday. "weekday" names a day of the week. "absolute" names a day of the month, with or without its month. "none" if no day is mentioned. The caller's date of birth is not the day the parcel was due.",
    "type": "choice",
  },
  "expectedDateMonth": {
    "criteria": {
      "april": null,
      "august": null,
      "december": null,
      "february": null,
      "january": null,
      "july": null,
      "june": null,
      "march": null,
      "may": null,
      "none": null,
      "november": null,
      "october": null,
      "september": null,
    },
    "instructions": "Read asr.text. The caller is saying which day a parcel was due to arrive. Which month do they name, if any? The caller's date of birth is not the day the parcel was due.",
    "type": "choice",
  },
  "expectedDateRelative": {
    "criteria": {
      "day_before_yesterday": null,
      "none": null,
      "today": null,
      "yesterday": null,
    },
    "instructions": "Read asr.text. The caller is saying which day a parcel was due to arrive. Do they say today, yesterday, or the day before yesterday?",
    "type": "choice",
  },
  "expectedDateWeekday": {
    "criteria": {
      "friday": null,
      "monday": null,
      "none": null,
      "saturday": null,
      "sunday": null,
      "thursday": null,
      "tuesday": null,
      "wednesday": null,
    },
    "instructions": "Read asr.text. The caller is saying which day a parcel was due to arrive. Which day of the week do they name, if any?",
    "type": "choice",
  },
  "frustration": {
    "instructions": "Read asr.text. How frustrated does the caller sound?",
    "levels": [
      {
        "description": "Calm or neutral wording, including a plain request made once",
        "label": "none",
      },
      {
        "description": "A sigh, an ugh, a come on or a seriously attached to an otherwise plain request, or a complaint about waiting, with no sign the caller is repeating themselves",
        "label": "mild",
      },
      {
        "description": "The caller says they already said or told us something, counts the attempts as in for the third time, asks are you kidding me, calls it ridiculous, swears, insults the system, or threatens to hang up or complain",
        "label": "high",
      },
    ],
    "type": "score",
  },
  "intelligible": {
    "criteria": {
      "false": "Garbled fragments, transcribed noise, or nothing but a filler sound such as um or uh",
      "true": "Any real utterance, including a single word, a yes or no, a name, a number, or a string of digits",
    },
    "instructions": "Read asr.text. Is the text words the caller actually said, rather than garbled fragments or background noise?",
    "type": "noul",
  },
  "intent": {
    "criteria": {
      "agent": "Asks to speak with a person, representative, or operator",
      "capabilities": "Asks what the system can do, what it is, or what the options are",
      "delivery_window": "Wants to choose or check a day and a time of day for a delivery",
      "done": "Says they are finished or need nothing more, as in no thanks, that is all, or goodbye, including a bare no when node.promptJustPlayed asked whether there is anything else",
      "none": "No request is expressed; the caller is only answering a question or saying something incidental",
      "other": "A request the parcel line does not handle",
      "repeat_prompt": "Asks the system to repeat what it just said",
      "report_missing": "Says a parcel is missing, lost or never arrived, and wants to report it",
      "track_parcel": "Asks where a parcel is, whether it has been delivered, or about a parcel by its number or by what is in it",
    },
    "instructions": "Read asr.text. What is the caller asking the parcel delivery line to do? If they are only answering a slot or confirmation question and not asking for anything new, choose none. When they ask for two separate things, choose the one they ask for first.",
    "type": "choice",
  },
  "intentChange": {
    "criteria": {
      "adding": "Asks for an additional task to be handled as well, while keeping the current one, for example with also, as well, and another thing, or after this",
      "answering": "Answers or reacts to the question that was just asked, restates the current task, or says something incidental; anything that is not a request for a different task",
      "replacing": "Abandons the current task in favour of a different one, for example with never mind, forget that, instead, or actually I just want",
    },
    "instructions": "Read asr.text. The caller is in the middle of the task described by activeFormLabel and was just asked node.promptJustPlayed. Which best describes this utterance?",
    "type": "choice",
  },
  "intentTentative": {
    "criteria": {
      "false": "The request is stated plainly, even if the caller hedges about a detail such as a day or a number",
      "true": "The hedge is about what the caller wants done, as in maybe I should report a parcel missing or I guess I need to track a parcel",
    },
    "instructions": "Read asr.text. Does the caller express their request tentatively, with words such as maybe, I guess, I think, possibly, or might, rather than stating it plainly?",
    "type": "noul",
  },
  "languageSwitch": {
    "criteria": {
      "es": "Spanish",
      "fr": "French",
      "none": "English",
    },
    "instructions": "Read asr.text. Which language other than English does the caller ask for or speak, if any?",
    "type": "choice",
  },
  "rephrasingLastTurn": {
    "instructions": "Read asr.text and history. Is the caller repeating or rewording a request because the previous turn's outcome in history shows the system did not act on it?",
    "type": "noul",
  },
  "spokeAMenuNumber": {
    "instructions": "Read asr.text. Does the caller say a single number as if choosing a menu option, such as "one" or "press two"?",
    "type": "noul",
  },
  "triedSelfService": {
    "instructions": "Read asr.text. Does the caller say they already tried the website, the app, or an earlier call?",
    "type": "noul",
  },
  "urgency": {
    "instructions": "Read asr.text. How urgent is the caller's need?",
    "levels": [
      {
        "description": "No time pressure mentioned",
        "label": "low",
      },
      {
        "description": "Wants it handled soon",
        "label": "normal",
      },
      {
        "description": "Says it is urgent, an emergency, or must happen today",
        "label": "high",
      },
    ],
    "type": "score",
  },
  "utteranceComplete": {
    "instructions": "Read asr.text. Has the caller finished their thought, rather than trailing off or being cut short?",
    "type": "noul",
  },
  "wantsHuman": {
    "instructions": "Read asr.text. Does the caller explicitly ask to talk to a person, an agent, a representative, or an operator?",
    "type": "noul",
  },
}
`;

exports[`the questions the model sees, on the testkit > pins every question inside a form 1`] = `
{
  "addressedToSystem": {
    "criteria": {
      "false": "Talking to someone else in the room, to a television, or to themselves, even when what they say is about the call",
      "true": "Anything said in reply to the phone system, including a short answer or correction to the question it just asked, such as a name, a day, a number, a yes or no, or a bare correction",
    },
    "instructions": "Read asr.text. Is the caller speaking to the phone system, as opposed to someone else in the room, a television, or themselves?",
    "type": "noul",
  },
  "confusedByPrompt": {
    "instructions": "Read asr.text and node.promptJustPlayed. Does the caller sound confused by what the system just asked?",
    "type": "noul",
  },
  "describesParcel": {
    "instructions": "Read asr.text. Does the caller describe the missing parcel: what was in it, what it looked like, or where it should have been left? A request alone is not a description.",
    "type": "noul",
  },
  "expectedDateDay": {
    "criteria": {
      "1": null,
      "10": null,
      "11": null,
      "12": null,
      "13": null,
      "14": null,
      "15": null,
      "16": null,
      "17": null,
      "18": null,
      "19": null,
      "2": null,
      "20": null,
      "21": null,
      "22": null,
      "23": null,
      "24": null,
      "25": null,
      "26": null,
      "27": null,
      "28": null,
      "29": null,
      "3": null,
      "30": null,
      "31": null,
      "4": null,
      "5": null,
      "6": null,
      "7": null,
      "8": null,
      "9": null,
      "none": null,
    },
    "instructions": "Read asr.text. The caller is saying which day a parcel was due to arrive. Which day of the month do they name, if any? The caller's date of birth is not the day the parcel was due.",
    "type": "choice",
  },
  "expectedDateMode": {
    "criteria": {
      "absolute": null,
      "none": null,
      "relative_day": null,
      "weekday": null,
    },
    "instructions": "Read asr.text. The caller is saying which day a parcel was due to arrive. How do they refer to the day? "relative_day" is today, yesterday, or the day before yesterday. "weekday" names a day of the week. "absolute" names a day of the month, with or without its month. "none" if no day is mentioned. The caller's date of birth is not the day the parcel was due.",
    "type": "choice",
  },
  "expectedDateMonth": {
    "criteria": {
      "april": null,
      "august": null,
      "december": null,
      "february": null,
      "january": null,
      "july": null,
      "june": null,
      "march": null,
      "may": null,
      "none": null,
      "november": null,
      "october": null,
      "september": null,
    },
    "instructions": "Read asr.text. The caller is saying which day a parcel was due to arrive. Which month do they name, if any? The caller's date of birth is not the day the parcel was due.",
    "type": "choice",
  },
  "expectedDateRelative": {
    "criteria": {
      "day_before_yesterday": null,
      "none": null,
      "today": null,
      "yesterday": null,
    },
    "instructions": "Read asr.text. The caller is saying which day a parcel was due to arrive. Do they say today, yesterday, or the day before yesterday?",
    "type": "choice",
  },
  "expectedDateWeekday": {
    "criteria": {
      "friday": null,
      "monday": null,
      "none": null,
      "saturday": null,
      "sunday": null,
      "thursday": null,
      "tuesday": null,
      "wednesday": null,
    },
    "instructions": "Read asr.text. The caller is saying which day a parcel was due to arrive. Which day of the week do they name, if any?",
    "type": "choice",
  },
  "frustration": {
    "instructions": "Read asr.text. How frustrated does the caller sound?",
    "levels": [
      {
        "description": "Calm or neutral wording, including a plain request made once",
        "label": "none",
      },
      {
        "description": "A sigh, an ugh, a come on or a seriously attached to an otherwise plain request, or a complaint about waiting, with no sign the caller is repeating themselves",
        "label": "mild",
      },
      {
        "description": "The caller says they already said or told us something, counts the attempts as in for the third time, asks are you kidding me, calls it ridiculous, swears, insults the system, or threatens to hang up or complain",
        "label": "high",
      },
    ],
    "type": "score",
  },
  "intelligible": {
    "criteria": {
      "false": "Garbled fragments, transcribed noise, or nothing but a filler sound such as um or uh",
      "true": "Any real utterance, including a single word, a yes or no, a name, a number, or a string of digits",
    },
    "instructions": "Read asr.text. Is the text words the caller actually said, rather than garbled fragments or background noise?",
    "type": "noul",
  },
  "intent": {
    "criteria": {
      "agent": "Asks to speak with a person, representative, or operator",
      "capabilities": "Asks what the system can do, what it is, or what the options are",
      "delivery_window": "Wants to choose or check a day and a time of day for a delivery",
      "done": "Says they are finished or need nothing more, as in no thanks, that is all, or goodbye, including a bare no when node.promptJustPlayed asked whether there is anything else",
      "none": "No request is expressed; the caller is only answering a question or saying something incidental",
      "other": "A request the parcel line does not handle",
      "repeat_prompt": "Asks the system to repeat what it just said",
      "report_missing": "Says a parcel is missing, lost or never arrived, and wants to report it",
      "track_parcel": "Asks where a parcel is, whether it has been delivered, or about a parcel by its number or by what is in it",
    },
    "instructions": "Read asr.text. What is the caller asking the parcel delivery line to do? If they are only answering a slot or confirmation question and not asking for anything new, choose none. When they ask for two separate things, choose the one they ask for first.",
    "type": "choice",
  },
  "intentChange": {
    "criteria": {
      "adding": "Asks for an additional task to be handled as well, while keeping the current one, for example with also, as well, and another thing, or after this",
      "answering": "Answers or reacts to the question that was just asked, restates the current task, or says something incidental; anything that is not a request for a different task",
      "replacing": "Abandons the current task in favour of a different one, for example with never mind, forget that, instead, or actually I just want",
    },
    "instructions": "Read asr.text. The caller is in the middle of the task described by activeFormLabel and was just asked node.promptJustPlayed. Which best describes this utterance?",
    "type": "choice",
  },
  "intentTentative": {
    "criteria": {
      "false": "The request is stated plainly, even if the caller hedges about a detail such as a day or a number",
      "true": "The hedge is about what the caller wants done, as in maybe I should report a parcel missing or I guess I need to track a parcel",
    },
    "instructions": "Read asr.text. Does the caller express their request tentatively, with words such as maybe, I guess, I think, possibly, or might, rather than stating it plainly?",
    "type": "noul",
  },
  "languageSwitch": {
    "criteria": {
      "es": "Spanish",
      "fr": "French",
      "none": "English",
    },
    "instructions": "Read asr.text. Which language other than English does the caller ask for or speak, if any?",
    "type": "choice",
  },
  "rephrasingLastTurn": {
    "instructions": "Read asr.text and history. Is the caller repeating or rewording a request because the previous turn's outcome in history shows the system did not act on it?",
    "type": "noul",
  },
  "spokeAMenuNumber": {
    "instructions": "Read asr.text. Does the caller say a single number as if choosing a menu option, such as "one" or "press two"?",
    "type": "noul",
  },
  "triedSelfService": {
    "instructions": "Read asr.text. Does the caller say they already tried the website, the app, or an earlier call?",
    "type": "noul",
  },
  "urgency": {
    "instructions": "Read asr.text. How urgent is the caller's need?",
    "levels": [
      {
        "description": "No time pressure mentioned",
        "label": "low",
      },
      {
        "description": "Wants it handled soon",
        "label": "normal",
      },
      {
        "description": "Says it is urgent, an emergency, or must happen today",
        "label": "high",
      },
    ],
    "type": "score",
  },
  "utteranceComplete": {
    "instructions": "Read asr.text. Has the caller finished their thought, rather than trailing off or being cut short?",
    "type": "noul",
  },
  "wantsHuman": {
    "instructions": "Read asr.text. Does the caller explicitly ask to talk to a person, an agent, a representative, or an operator?",
    "type": "noul",
  },
}
`;

exports[`the questions the model sees, on the testkit > pins every question outside a form 1`] = `
{
  "accountIdComplete": {
    "instructions": "Read asr.text. If the caller states an account ID, do they finish saying the whole number rather than trailing off?",
    "type": "noul",
  },
  "accountIdSpan": {
    "criteria": {
      "none": "No span of asr.text is an account ID",
    },
    "instructions": "Read asr.text. Which of these spans is the account ID the caller states? Choose the span that covers the whole number as spoken, and no other words. Choose none if no span is an account ID.",
    "type": "choice",
  },
  "addressedToSystem": {
    "criteria": {
      "false": "Talking to someone else in the room, to a television, or to themselves, even when what they say is about the call",
      "true": "Anything said in reply to the phone system, including a short answer or correction to the question it just asked, such as a name, a day, a number, a yes or no, or a bare correction",
    },
    "instructions": "Read asr.text. Is the caller speaking to the phone system, as opposed to someone else in the room, a television, or themselves?",
    "type": "noul",
  },
  "confusedByPrompt": {
    "instructions": "Read asr.text and node.promptJustPlayed. Does the caller sound confused by what the system just asked?",
    "type": "noul",
  },
  "containsAccountId": {
    "instructions": "Read asr.text. Does the caller state an account ID number, either as digits or as spoken number words?",
    "type": "noul",
  },
  "deliveryDayDay": {
    "criteria": {
      "1": null,
      "10": null,
      "11": null,
      "12": null,
      "13": null,
      "14": null,
      "15": null,
      "16": null,
      "17": null,
      "18": null,
      "19": null,
      "2": null,
      "20": null,
      "21": null,
      "22": null,
      "23": null,
      "24": null,
      "25": null,
      "26": null,
      "27": null,
      "28": null,
      "29": null,
      "3": null,
      "30": null,
      "31": null,
      "4": null,
      "5": null,
      "6": null,
      "7": null,
      "8": null,
      "9": null,
      "none": null,
    },
    "instructions": "Read asr.text. The caller is saying which day they want a delivery on. Which day of the month do they name, if any?",
    "type": "choice",
  },
  "deliveryDayMode": {
    "criteria": {
      "absolute": null,
      "none": null,
      "relative_day": null,
      "weekday": null,
    },
    "instructions": "Read asr.text. The caller is saying which day they want a delivery on. How do they refer to the day? "relative_day" is today, tomorrow, or the day after tomorrow. "weekday" names a day of the week. "absolute" names a month and a day of the month. "none" if no day is mentioned.",
    "type": "choice",
  },
  "deliveryDayMonth": {
    "criteria": {
      "april": null,
      "august": null,
      "december": null,
      "february": null,
      "january": null,
      "july": null,
      "june": null,
      "march": null,
      "may": null,
      "none": null,
      "november": null,
      "october": null,
      "september": null,
    },
    "instructions": "Read asr.text. The caller is saying which day they want a delivery on. Which month do they name, if any?",
    "type": "choice",
  },
  "deliveryDayRelative": {
    "criteria": {
      "day_after_tomorrow": null,
      "none": null,
      "today": null,
      "tomorrow": null,
    },
    "instructions": "Read asr.text. The caller is saying which day they want a delivery on. Do they say today, tomorrow, or the day after tomorrow?",
    "type": "choice",
  },
  "deliveryDayWeekday": {
    "criteria": {
      "friday": null,
      "monday": null,
      "none": null,
      "saturday": null,
      "sunday": null,
      "thursday": null,
      "tuesday": null,
      "wednesday": null,
    },
    "instructions": "Read asr.text. The caller is saying which day they want a delivery on. Which day of the week do they name, if any?",
    "type": "choice",
  },
  "deliveryPart": {
    "criteria": {
      "afternoon": "The afternoon, from noon until about five",
      "evening": "The evening, after about five",
      "morning": "The morning, before noon",
      "none": "Names no part of the day",
    },
    "instructions": "Read asr.text alone. Which part of the day do these words name for a delivery?",
    "type": "choice",
  },
  "describesParcel": {
    "instructions": "Read asr.text. Does the caller describe the missing parcel: what was in it, what it looked like, or where it should have been left? A request alone is not a description.",
    "type": "noul",
  },
  "dobDay": {
    "criteria": {
      "1": null,
      "10": null,
      "11": null,
      "12": null,
      "13": null,
      "14": null,
      "15": null,
      "16": null,
      "17": null,
      "18": null,
      "19": null,
      "2": null,
      "20": null,
      "21": null,
      "22": null,
      "23": null,
      "24": null,
      "25": null,
      "26": null,
      "27": null,
      "28": null,
      "29": null,
      "3": null,
      "30": null,
      "31": null,
      "4": null,
      "5": null,
      "6": null,
      "7": null,
      "8": null,
      "9": null,
      "none": null,
    },
    "instructions": "Read asr.text. Which day of the month is the caller's date of birth, if they say one? A date said as numbers is month first, then day, then year.",
    "type": "choice",
  },
  "dobGiven": {
    "criteria": {
      "false": "No birth date. A delivery date, or someone else's birth date, is not the caller's date of birth",
      "true": "The caller gives their own birth date or part of it: a full date, a month and day, or a year on its own in answer to a question about their birth year",
    },
    "instructions": "Read asr.text. Does the caller state their date of birth, in whole or in part (a month and day, or a year alone when asked for it)?",
    "type": "noul",
  },
  "dobMonth": {
    "criteria": {
      "april": null,
      "august": null,
      "december": null,
      "february": null,
      "january": null,
      "july": null,
      "june": null,
      "march": null,
      "may": null,
      "none": null,
      "november": null,
      "october": null,
      "september": null,
    },
    "instructions": "Read asr.text. Which month is the caller's date of birth in, if they say one? A date said as numbers is month first, then day, then year.",
    "type": "choice",
  },
  "dobYear": {
    "criteria": {
      "none": "No span of asr.text is the year of the caller's birth",
    },
    "instructions": "Read asr.text. Which of these spans is the year of the caller's birth, if they say one? Choose none when no year is said.",
    "type": "choice",
  },
  "expectedDateDay": {
    "criteria": {
      "1": null,
      "10": null,
      "11": null,
      "12": null,
      "13": null,
      "14": null,
      "15": null,
      "16": null,
      "17": null,
      "18": null,
      "19": null,
      "2": null,
      "20": null,
      "21": null,
      "22": null,
      "23": null,
      "24": null,
      "25": null,
      "26": null,
      "27": null,
      "28": null,
      "29": null,
      "3": null,
      "30": null,
      "31": null,
      "4": null,
      "5": null,
      "6": null,
      "7": null,
      "8": null,
      "9": null,
      "none": null,
    },
    "instructions": "Read asr.text. The caller is saying which day a parcel was due to arrive. Which day of the month do they name, if any? The caller's date of birth is not the day the parcel was due.",
    "type": "choice",
  },
  "expectedDateMode": {
    "criteria": {
      "absolute": null,
      "none": null,
      "relative_day": null,
      "weekday": null,
    },
    "instructions": "Read asr.text. The caller is saying which day a parcel was due to arrive. How do they refer to the day? "relative_day" is today, yesterday, or the day before yesterday. "weekday" names a day of the week. "absolute" names a day of the month, with or without its month. "none" if no day is mentioned. The caller's date of birth is not the day the parcel was due.",
    "type": "choice",
  },
  "expectedDateMonth": {
    "criteria": {
      "april": null,
      "august": null,
      "december": null,
      "february": null,
      "january": null,
      "july": null,
      "june": null,
      "march": null,
      "may": null,
      "none": null,
      "november": null,
      "october": null,
      "september": null,
    },
    "instructions": "Read asr.text. The caller is saying which day a parcel was due to arrive. Which month do they name, if any? The caller's date of birth is not the day the parcel was due.",
    "type": "choice",
  },
  "expectedDateRelative": {
    "criteria": {
      "day_before_yesterday": null,
      "none": null,
      "today": null,
      "yesterday": null,
    },
    "instructions": "Read asr.text. The caller is saying which day a parcel was due to arrive. Do they say today, yesterday, or the day before yesterday?",
    "type": "choice",
  },
  "expectedDateWeekday": {
    "criteria": {
      "friday": null,
      "monday": null,
      "none": null,
      "saturday": null,
      "sunday": null,
      "thursday": null,
      "tuesday": null,
      "wednesday": null,
    },
    "instructions": "Read asr.text. The caller is saying which day a parcel was due to arrive. Which day of the week do they name, if any?",
    "type": "choice",
  },
  "frustration": {
    "instructions": "Read asr.text. How frustrated does the caller sound?",
    "levels": [
      {
        "description": "Calm or neutral wording, including a plain request made once",
        "label": "none",
      },
      {
        "description": "A sigh, an ugh, a come on or a seriously attached to an otherwise plain request, or a complaint about waiting, with no sign the caller is repeating themselves",
        "label": "mild",
      },
      {
        "description": "The caller says they already said or told us something, counts the attempts as in for the third time, asks are you kidding me, calls it ridiculous, swears, insults the system, or threatens to hang up or complain",
        "label": "high",
      },
    ],
    "type": "score",
  },
  "intelligible": {
    "criteria": {
      "false": "Garbled fragments, transcribed noise, or nothing but a filler sound such as um or uh",
      "true": "Any real utterance, including a single word, a yes or no, a name, a number, or a string of digits",
    },
    "instructions": "Read asr.text. Is the text words the caller actually said, rather than garbled fragments or background noise?",
    "type": "noul",
  },
  "intent": {
    "criteria": {
      "agent": "Asks to speak with a person, representative, or operator",
      "capabilities": "Asks what the system can do, what it is, or what the options are",
      "delivery_window": "Wants to choose or check a day and a time of day for a delivery",
      "done": "Says they are finished or need nothing more, as in no thanks, that is all, or goodbye, including a bare no when node.promptJustPlayed asked whether there is anything else",
      "none": "No request is expressed; the caller is only answering a question or saying something incidental",
      "other": "A request the parcel line does not handle",
      "repeat_prompt": "Asks the system to repeat what it just said",
      "report_missing": "Says a parcel is missing, lost or never arrived, and wants to report it",
      "track_parcel": "Asks where a parcel is, whether it has been delivered, or about a parcel by its number or by what is in it",
    },
    "instructions": "Read asr.text. What is the caller asking the parcel delivery line to do? If they are only answering a slot or confirmation question and not asking for anything new, choose none. When they ask for two separate things, choose the one they ask for first.",
    "type": "choice",
  },
  "intentTentative": {
    "criteria": {
      "false": "The request is stated plainly, even if the caller hedges about a detail such as a day or a number",
      "true": "The hedge is about what the caller wants done, as in maybe I should report a parcel missing or I guess I need to track a parcel",
    },
    "instructions": "Read asr.text. Does the caller express their request tentatively, with words such as maybe, I guess, I think, possibly, or might, rather than stating it plainly?",
    "type": "noul",
  },
  "languageSwitch": {
    "criteria": {
      "es": "Spanish",
      "fr": "French",
      "none": "English",
    },
    "instructions": "Read asr.text. Which language other than English does the caller ask for or speak, if any?",
    "type": "choice",
  },
  "rephrasingLastTurn": {
    "instructions": "Read asr.text and history. Is the caller repeating or rewording a request because the previous turn's outcome in history shows the system did not act on it?",
    "type": "noul",
  },
  "secondIntent": {
    "criteria": {
      "delivery_window": "A second, separate request on top of the main one: Wants to choose or check a day and a time of day for a delivery",
      "none": "Everything the caller says belongs to one request, even if they describe it twice or add details to it; or they ask for nothing",
      "report_missing": "A second, separate request on top of the main one: Says a parcel is missing, lost or never arrived, and wants to report it",
      "track_parcel": "A second, separate request on top of the main one: Asks where a parcel is, whether it has been delivered, or about a parcel by its number or by what is in it",
    },
    "instructions": "Read asr.text. The caller states one main request. Does the same utterance also ask for a second, separate task on top of it, joined by words such as and also, as well, another thing, or while I have you? If so, which is the extra task? Choose none when everything they say is part of one request.",
    "type": "choice",
  },
  "spokeAMenuNumber": {
    "instructions": "Read asr.text. Does the caller say a single number as if choosing a menu option, such as "one" or "press two"?",
    "type": "noul",
  },
  "triedSelfService": {
    "instructions": "Read asr.text. Does the caller say they already tried the website, the app, or an earlier call?",
    "type": "noul",
  },
  "urgency": {
    "instructions": "Read asr.text. How urgent is the caller's need?",
    "levels": [
      {
        "description": "No time pressure mentioned",
        "label": "low",
      },
      {
        "description": "Wants it handled soon",
        "label": "normal",
      },
      {
        "description": "Says it is urgent, an emergency, or must happen today",
        "label": "high",
      },
    ],
    "type": "score",
  },
  "utteranceComplete": {
    "instructions": "Read asr.text. Has the caller finished their thought, rather than trailing off or being cut short?",
    "type": "noul",
  },
  "wantsHuman": {
    "instructions": "Read asr.text. Does the caller explicitly ask to talk to a person, an agent, a representative, or an operator?",
    "type": "noul",
  },
}
`;
